--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^5.12.12"
+    "mongoose": "^5.12.12",
+    "slugify": "^1.5.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
