--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "SinecKers",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
