--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^5.12.12",
+    "nodemailer": "^6.6.1",
     "slugify": "^1.5.3"
   },
   "devDependencies": {
